# rust-personal-website

./: .gitignore  Cargo.toml  dev.zsh  vercel-deploy-prebuild.sh
.github/workflows/: vercel-deploy.yml
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  shader.wgsl  wgpu_canvas.rs  wgpu_context.rs
server/: Cargo.toml  vercel.json
server/api/: lambda.rs  vercel.rs
server/src/: lib.rs  main.rs
