[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
log = "0.4.27"
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
gloo = "0.11"

web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "KeyboardEvent",
    "DomRect",
    "HtmlCanvasElement",
] }

winit = { version = "0.30.11" }
wgpu = "25.0"
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = "0.18"
