[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["tokio", "http1"] }
clap = { version = "4.5.38", features = ["derive"] }
log = "0.4.27"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
